# python-template

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  azurite.env  docker-compose-dev.yaml  docker-compose-pytest.yaml  docker-compose.yaml  mypy.ini  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
api/: dependencies.py  main.py
api/config/: storage.py
api/models/examples/: responses.py
api/models/tasks/: metadata.py  responses.py
api/repositories/: celery.py
api/routes/: examples.py  run.py  tasks.py
api/utils/: date_utils.py
api/workers/: config.py  examples.py  run.py
src/: main.py
tests/: conftest.py
tests/api/: test_dependencies.py  test_end_to_end.py  test_main.py
tests/api/models/tasks/: test_responses.py
tests/api/repositories/: test_celery.py
tests/api/routes/: test_examples.py  test_run.py  test_tasks.py
tests/api/utils/: test_date_utils.py
tests/api/workers/: test_celery_workers.py  test_examples.py  test_run.py
tests/src/: test_main.py
