[tool.poetry]
name = "fastapi-celery-example"
version = "0.0.1"
description = "An example FastAPI app using Celery for task queuing."
authors = ["David Bossanyi"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
celery = "^5.3.4"
kombu = "^5.3.2"
pydantic = "^2.4.2"
azure-storage-blob = "12.18.3"
azure-storage-queue = "12.7.3"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-mock = "^3.11.1"
pytest-celery = "^0.0.0"
coverage = "^7.3.2"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.0"
mypy = "^1.6.1"
deptry = "^0.12.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "integration",
]
filterwarnings = [
    "ignore::DeprecationWarning:celery.*:",
    "ignore::DeprecationWarning:kombu.*:",
]

[tool.ruff]
extend-exclude = [".venv"]
line-length = 127
extend-select = [
    "B",
    "C4",
    "C90",
    "E",
    "F",
    "I001",
    "RUF",
    "S",
    "T20",
    "UP",
    "W",
]
ignore = [
  "B008", # Do not perform function call in argument defaults
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.mccabe]
max-complexity = 20

[tool.black]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[tool.deptry.per_rule_ignores]
DEP002 = ["kombu", "uvicorn"]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code"]

files = [
    "api",
    "tests",
]

plugins = [
  "pydantic.mypy",
]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
  "celery.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "api.workers.*",
]
disallow_untyped_decorators = false
